--- a/missing_map.ipynb
+++ b/missing_map.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "missing_map.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMo9G0I6DuVrkb1cX4j6Us+",
+      "authorship_tag": "ABX9TyOZ+Z4urGSIyGxiGqs2UCnx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,20 +32,10 @@
       },
       "source": [
         "##Missing Map em Python\n",
-        "Uma maneira de analisar visualmente os dados missing do seu conjunto de dados é utilizar a biblioteca *missingno* para plotar um mapa dos seus dados faltantes. \n",
-        "A seguir mostro o passo a passo para criar esse mapa dos missing data.\n",
+        "Uma maneira de analisar visualmente os dados missing do conjunto de dados é utilizar a biblioteca *missingno* para plotar um mapa dos dados faltantes. \n",
+        "A seguir mostro o passo a passo para criar esse mapa dos missings data.\n",
         "\n",
         "Para maiores informações da biblioteca *missingno* veja o github:https://github.com/ResidentMario/missingno"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zmrbXeVUFNFL",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -81,7 +71,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Como exemplo utilizaremos o famoso conjunto de dados do Titanic, disponível no Kaggle."
+        "Como exemplo, utilizaremos o famoso conjunto de dados do Titanic, disponível no Kaggle."
       ]
     },
     {
@@ -433,9 +423,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Observamos que temos dados faltantes nas variáveis age, cabin, boat, body, home e a variável fare tem apenas um dado faltante.\n",
+        "Observe que temos vários dados faltantes nas variáveis *age, cabin, boat, body* e *home*. A variável *fare* tem apenas observação faltante.\n",
         "\n",
-        "Bom espero que vocês tenham gostado, essa é uma maneira simples de visualizar os dados faltantes no seu conjunto de dados."
+        "Bom espero que vocês tenham gostado dessa maneira de visualizar os dados faltantes. Com um simples plot conseguimos visualizar todos os dados faltantes no conjunto de dados."
       ]
     }
   ]
