--- a/missing_map.ipynb
+++ b/missing_map.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "missing_map.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ+Z4urGSIyGxiGqs2UCnx",
+      "authorship_tag": "ABX9TyNqblRds2Tr+9CuloBjjjyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,7 +423,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Observe que temos vários dados faltantes nas variáveis *age, cabin, boat, body* e *home*. A variável *fare* tem apenas observação faltante.\n",
+        "Observe que temos vários dados faltantes nas variáveis *age, cabin, boat, body* e *home*. A variável *fare* tem apenas uma observação faltante.\n",
         "\n",
         "Bom espero que vocês tenham gostado dessa maneira de visualizar os dados faltantes. Com um simples plot conseguimos visualizar todos os dados faltantes no conjunto de dados."
       ]
