--- a/Import_Dataset_Colab.ipynb
+++ b/Import_Dataset_Colab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Import-Dataset-Colab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUA0N6JkP5DIZ62X+Wc5MQ",
+      "authorship_tag": "ABX9TyOeDU2WFT4utXgu7oqUTw+W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "3. Importando os dados do Github.\n",
         "\n",
         "\n",
-        "## **Importando Dataset do Drive**\n",
+        "## **1. Importando Dataset do Drive**\n",
         "\n",
         "Uma das maneiras de importar o conjunto de dados para o Colab é salvar o dataset no Google Drive e depois importar o mesmo para o Colab. \n",
         "\n",
@@ -83,7 +83,7 @@
       "source": [
         "##IMPORTANDO o data set\n",
         "import pandas as pd\n",
-        "df= pd.read_excel('/content/drive/My Drive/kaggle_datasets/gapminder_final.xlsx')\n",
+        "df = pd.read_excel('/content/drive/My Drive/kaggle_datasets/gapminder_final.xlsx')\n",
         "df.head()"
       ],
       "execution_count": null,
@@ -96,7 +96,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##**Importando o Dataset um Drive Local**\n",
+        "##**2. Importando o Dataset um Drive Local**\n",
         "\n",
         "Se o conjunto de dados estiver salvo no seu computador, podemos utilizar os comandos a seguir para importar o dataset.\n",
         "\n",
@@ -125,7 +125,7 @@
         "colab": {}
       },
       "source": [
-        "df= pd.read_excel('gapminder_final.xlsx')\n",
+        "df = pd.read_excel('gapminder_final.xlsx')\n",
         "\n",
         "df.head()"
       ],
